--- a/intro.tex
+++ b/intro.tex
@@ -29,7 +29,7 @@ Early diagnosis is crucial for the best recovery, and to do so, there is a need 
 \label{fig: SD}
 \end{figure}
 
-The research group have developed implantable diagnostic systems, which can detect these three electrochemical signals of interest, such as the LENBIC \cite{Pagkalos2017}. It contain amperometric channels for the detection of glucose and lactate, and potentiometric channels for the detection of potassium ions from the microdialysis system it is connected to. However, the LENBIC is a wired system, so its limitations include requiring an orifice for the wires to exit the body, the patient's movement is restricted, the wires may break, and the wires may introduce noise \cite{Ferguson2011}. Therefore, a wireless transmission system is more desirable to communicate the electrochemical data. 
+The research group have developed the LENBIC, and ASIC (application specific integrated chip) which can measure these three electrochemical signals of interest using the microdialysis system inserted into the brain \cite{Pagkalos2017}. It contains amperometric channels for the detection of glucose and lactate, and potentiometric channels for the detection of potassium ions from the microdialysis system it is connected to. However, the LENBIC is a wired system, so its limitations include requiring an orifice for the wires to exit the body, the patient's movement is restricted, the wires may break, and the wires may introduce noise \cite{Ferguson2011}. Therefore, a wireless transmission system is more desirable to communicate the electrochemical data. 
 
 \textbf{DOUBLE CHECK WITH MICHELLE ABOUT THIS}
 Furthermore, data is extracted from the microdialysis system at the end of experimentation and is later analysed manually by someone who is trained to identify when an SD has occurred. This prevents diagnosis from occurring sooner at the time of the SD. There is a need for the data to be received and analysed in real time to ensure early diagnosis. 
