--- a/report.tex
+++ b/report.tex
@@ -15,7 +15,6 @@
 \newpage
 
 \section{Introduction}
-
 \input{intro.tex}
 
 \section{Design}
@@ -37,6 +36,14 @@
 %\bibliographystyle{ieeetr}
 \bibliographystyle{unsrt}
 
+\newpage
+
 \appendix
+\section{Appendix: Project Code}
+\label{appendix: a}
+\begin{itemize}
+    \item Firmware code can be found at: \newline \url{https://github.com/ajp15/MEngIndvProject-arduino}
+    \item iPad app development can be found at: \newline \url{https://github.com/ajp15/MEngIndvProject-app2}
+\end{itemize}
 
 \end{document}
