--- a/design.tex
+++ b/design.tex
@@ -40,9 +40,9 @@ The Arduino Nano is encoded to sample and process the three input signals receiv
 
 
 \subsubsection{Signal Processing}
-Every 200ms the Arduino reads the input signals at the A0, A1 and A7 pins and records the time at which sampling occurred. The recorded data is mapped to its corresponding voltage value. For every five samples of data recorded, so in a 1s period, the average voltage is calculated for each signal. This averaging methods allows large deviations and spikes to be smoothed, thereby reducing the effect of noise on the outputted data.
+Every 200ms the Arduino reads the input signals at the A0, A1 and A7 pins and records the time, in milliseconds since the Arduino was connected to power, at which sampling occurred. Each input signal received by the Arduino is filtered with a low-pass filter with a cut off frequency of 1Hz. This cut off frequency was chosen because the events indicating a SD occur over a long time frame, as shown in Figure~\ref{fig: SD}, hence the changes occur slowly and at low frequency. The low pass filter attenuates high frequency components that may arise from noise or patient movement, allowing for a cleaner signal to be obtained.
 
-Each input signal received by the Arduino is filtered with a low-pass filter with a cut off frequency of 1Hz. This cut off frequency was chosen because the events indicating a SD occur over a long time frame, as shown in Figure~\ref{fig: SD}, hence the changes occur slowly and at low frequency. The low pass filter attenuates high frequency components that may arise from noise or patient movement, allowing for a cleaner signal to be obtained that contains the relevant data.
+For every five samples of data recorded, so in a 1s period, the average voltage is calculated for each signal. This averaging methods allows large deviations and spikes to be smoothed, thereby reducing the effect of noise on the outputted data.
 
 
 \subsubsection{Wireless Transmission}
@@ -55,7 +55,7 @@ Each input signal received by the Arduino is filtered with a low-pass filter wit
 \label{fig: psuedocode}
 \end{figure}
 
-Bluetooth Low Energy (BLE) and ZigBee are both popular wireless data transmission options for IoT projects. Table~\ref{table:BLE vs ZigBee} summarises the differences between BLE and ZigBee.
+BLE and ZigBee are both popular wireless data transmission options for IoT projects. Table~\ref{table:BLE vs ZigBee} summarises the differences between BLE and ZigBee. For this project, BLE is the most suitable option. BLE offers more efficient data transfer, shown by the lower latency time and higher throughout, and is compatible with iOS. A disadvantage of BLE is that it has a shorter range than ZigBee, however this is not of hindrance as the range is sufficient for the application since the patient will remain close to the iPad that will receive the transmitted signals. BLE is commonly used for health and fitness trackers, making it a suitable method of transmission for this project's application.
 
 \begin{table}[t!]
 \centering
@@ -76,24 +76,36 @@ Bluetooth Low Energy (BLE) and ZigBee are both popular wireless data transmissio
 \label{table:BLE vs ZigBee}
 \end{table}
 
-For this project, BLE is the most suitable option. BLE offers more efficient data transfer and is compatible with iOS. BLE has a shorter range than ZigBee, but this is not of hindrance as the patient will remain close to the iPad that will receive the signals. BLE is commonly used for health and fitness trackers, making it a suitable method of transmission for this project's application.
+Adafruit provide a variety of Bluetooth low energy modules that are compatible with Arduino, and they provide a library that can be used with the Arduino IDE: Adafruit\_BluefruitLE\_nRF51. Adafruit also provide an iOS app to test the bluetooth module and view the received signals. Whilst the PCB currently being developed allows for both SPI and UART data transmission, SPI was the chosen mode for the prototype hence the Bluefruit LE SPI Friend was chosen over the Bluefruit LE UART Friend. Both share similarities and use the same library in the Arduino IDE, however SPI was preferred as it has a clock line where data can be sent along with the clock pulses, so the timing of when data is sent is more reliable. The Arduino Nano has inbuilt SPI pins: D11 is MOSI, D12 is MISO and D13 is SCK. These connect to the corresponding pins on the Bluefruit, which are shown by the orange connections in Figure~\ref{fig: breadboard}. D10 on the Arduino is programmed as the CS and D7 is programmed as the IRQ, which are then wired to the corresponding Bluefruit pins, shown by the blue wires in Figure~\ref{fig: breadboard}. 
 
-Adafruit provide a variety of Bluetooth low energy modules that are compatible with Arduino and provide a library that can be used with the Arduino IDE: Adafruit\_BluefruitLE\_nRF51. Adafruit also provide an iOS app to test the bluetooth module and view the received signals. Whilst the PCB currently being developed allows for both SPI and UART data transmission, SPI was the chosen mode for the prototype hence the Bluefruit LE SPI Friend was chosen over the Bluefruit LE UART Friend. Both share similarities and have the same library that is used in the Arduino IDE, however SPI was preferred as it has a clock line where data can be sent along with the clock pulses, so the timing of when data is sent is more reliable. The Arduino Nano has inbuilt SPI pins: D11 is MOSI, D12 is MISO and D13 is SCK. These connect to the corresponding pins on the Bluefruit. D10 on the Arduino is programmed as the CS and D7 is programmed as the IRQ, which are then wired to the corresponding Bluefruit pins. 
-
-The Adafruit\_BluefruitLE\_nRF51 library provides a header file specifically for the Bluefruit LE SPI Friend which provides functions that allow for the transmission of data via BLE to a paired device, such as {\tt{ble.print()}}. The limitation of this function is that a maximum of 20 characters can be sent at a time otherwise the data becomes fragmented. This means that the data from each input pin and the corresponding time of recording has to be wirelessly transmitted one at a time rather than all three simultaneously to prevent the risk of the data fragmenting. The data from each input pin is outputted in characters as:
+The Adafruit\_BluefruitLE\_nRF51 library provides a header file specifically for the Bluefruit LE SPI Friend which provides functions that allow for the transmission of data via BLE to a paired device. The function used is {\tt{ble.print()}}. The limitation of this function is that a maximum of 20 characters can be sent at a time otherwise the data becomes fragmented. This means that the data from each input pin and the corresponding time of recording has to be wirelessly transmitted one at a time rather than all three sent simultaneously to prevent the risk of the data fragmenting. The data from each input pin is outputted in characters as:
 
 \begin{align}
-    Output = ID + Time + Value + \backslash n.
+    Output = ID + Time + Voltage + \backslash n.
     \nonumber
 \end{align}
 
-The ID at the beginning identifies which signal is being read i.e. G for glucose, and the newline character ($\backslash$n) at the end concludes the data transmission. If both these identifiers are not present at the receiving end, this indicates that the data is fragmented and the receiving app will discard the data. 
+The \textit{ID} at the beginning identifies which signal is being sent i.e. G for glucose, and the newline character (\textit{$\backslash$n}) at the end concludes the the string being transmitted. If both these identifiers are not present at these specific locations when received on the app, this indicates that the data is fragmented and the app will discard the data. 
 
-Another limitation was observed when all three inputs were periodically sent within a 200ms period. The data would initially be sent correctly but after some time, the data would fragment. The Bluefruit struggled to send data so quickly, which created a backlog of data that was responsible for the fragmentation. Eventually, the Bluetooth module would disconnect from the app. To prevent this, the three signals were periodically sent every 1s, spaced such that potassium was sent at 200ms, glucose at 600ms, and lactate on the 1s. Since the electrochemical changes in the brain occur at slow rates, for example an SD event takes about 10 minutes, a sampling speed of 1s is suitable for this application. 
+Another limitation was observed when all three inputs were periodically sent within a 200ms period. The data would initially be sent correctly but after some time, the data would fragment. The Bluefruit struggled to send the data so quickly, which created a backlog of data that was responsible for the fragmentation. Eventually, the Bluetooth module would disconnect from the app. To prevent this, the three signals were periodically sent every 1s, spaced such that potassium was sent at 200ms, glucose at 600ms, and lactate on the 1s as highlighted in Figure~\ref{fig: psuedocode}. Since the electrochemical changes in the brain occur at slow rates, for example an SD event takes about 10 minutes, a sampling speed of 1s on the app is suitable for this application. 
 
 
 
 
 
 \subsection{iPad Application}
-The iPad app was written in Swift using XCode. The story board is shown in Figure X.
+The iPad app was written in Swift using XCode. The app layout is shown in Figure X. The app receives the strings of data sent by the Bluefruit and checks the the \textit{ID} and newline character are in place. Depending on the \textit{ID}, the app stores the \textit{Time} and \textit{Voltage} string in arrays corresponding to the electrochemical signal being read. Each new data point for a given electrochemical signal is received every 1s. The \textit{Time} string received is converted from the time in milliseconds into the real clock time at which the signal was read from the Arduino analogue input pin. It is important that the signals are timestamped with the real time of recording as opposed to the time at which the signals were received on the app as over time there may be a time lag in transmission.
+
+\subsubsection{iOS Charts API}
+
+% talk about time and voltage value plotted on graphs. uses Charts API. chemcomp displays all three plots on one graph. clicking on the button takes to the individual graphs. All graphs are zoomable and scalable. Can click on single data point and balloon marker shows x and y values
+
+\subsubsection{Calibration}
+% mention toggle switch to change between voltage on y axis to corresponding concentration for individual plot graphs. need to know relationship between V and conc. found through calibration
+
+% frequent calibration since sensors degrade. Include table at which for each electrochemical signal, the conc values voltages are found for. Chemcomp can insert calibration values. if calibration values aren't provided, doesnt plot a conc vs time plot
+
+% K+ derivation
+
+% glucose and lactate linear derivation. mention hill equation -> linear. Limitation with 3 points -> many lines of best fit -> use least sqaures method to find best line of best fit
+
