--- a/report.tex
+++ b/report.tex
@@ -9,25 +9,29 @@
 \begin{abstract}
     250 words to summarise the project
     
-    %example of citation: \cite{TexasInstruments2010}
 \end{abstract}
 
 \newpage
 
 \section{Introduction}
 \input{intro.tex}
+\newpage
 
 \section{Design}
 \input{design.tex}
+\newpage
 
 \section{Testing}
 \input{testing.tex}
+\newpage
 
 \section{Results}
 \input{results.tex}
+\newpage
 
 \section{Discussion}
 \input{discussion.tex}
+\newpage
 
 \section{Acknowledgements}
 
