--- a/testing.tex
+++ b/testing.tex
@@ -1,3 +1,7 @@
 \subsection{Standard Signals}
+% describe testing procedure done in labs
+% mention limitation of picoscope so had one constant signal connected to Arduino GND pin. Fixed voltage
+
+% purpose of the test is to show the app can receive three signals simultaneously, compare the signals with expected values on PicoLab, and show features of the app. evaluate suitability of filtering and averaging
 
 \subsection{Brain Signals}
